style.css
/* ... */
@layer global {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  body {
    margin: 0;
    min-height: 50vh; /* temporary - delete after complete */
    font-family: "Lexend Deca", Arial, Helvetica, sans-serif;
    font-size: var(--fs-15);
  }

  img {
    max-width: 100%;
    height: auto;
    display: block;
  }

  h1,
  h2,
  h3 {
    font-family: var(--ff-mono);
    margin: 0;
    line-height: 1.1;
  }

  p {
    line-height: 1.6;
    margin: 0;
  }

  a {
    text-decoration: none;
  }

  header ul,
  footer ul {
    margin: 0;
    padding: 0;

    li {
      list-style-type: none;
    }
  }

  .visually-hidden {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
  }
}

@layer layout {
  .wrapper {
    display: grid;
    grid-template-columns: 1fr calc(100% - 64px) 1fr;

    @media (width >= calc(700 / 16 * 1rem)) {
      grid-template-columns: 1fr min(calc(100% - 80px), calc(1110 / 16 * 1rem)) 1fr;
    }

    &.fb-col {
      display: grid;
      grid-template-columns: 1fr repeat(3, calc(calc(100% - 64px) / 3)) 1fr;
    }

    &.small {
      @media (width >= calc(700 / 16 * 1rem)) and (width < calc(1000 / 16 * 1rem)) {
        grid-template-columns:
          1fr min(calc(100% - 200px), calc(1110 / 16 * 1rem))
          1fr;
      }
    }

    > * {
      grid-column: 2;
    }

    > .fullbleed {
      grid-column: 1 / -1;
    }
  }
}

@layer button {
  .button {
    display: block;
    background: var(--c-yellow);
    width: fit-content;
    padding: 14px 40px;
    color: var(--c-white);
    font-family: var(--ff-mono);
  }
}

@layer header {
  .header {
    padding-block: 20px;
    align-items: center;

    .header-logo,
    .header-links {
      grid-row: 1;
    }
    .header-logo {
      justify-self: center;
      width: calc(75 / 16 * 1rem);

      @media (width >= calc(700 / 16 * 1rem)) {
        justify-self: start;
        width: calc(108 / 16 * 1rem);
      }
    }

    .header-links {
      justify-self: start;
      display: grid;
      align-items: center;

      @media (width >= calc(700 / 16 * 1rem)) {
        padding-left: 167px;
        width: 100%;
      }
    }
  }
}

@layer topnav {
  .topnav {
    z-index: 10;

    &::before {
      content: "";
      position: fixed;
      inset: 60px 0 0 0;
      background: var(--c-black-overlay);
      opacity: 0;
      pointer-events: none;
      transition: opacity 0.5s ease-in-out;
    }
    &:has(.topnav__open[aria-expanded="true"])::before {
      opacity: 1;
    }
  }

  .topnav button {
    translate: 0 2px;
    background: none;
    border: none;
    padding: 0;

    @media (width >= calc(700 / 16 * 1rem)) {
      display: none;
    }
  }

  .topnav__open[aria-expanded="true"] {
    display: none;

    + .topnav__menu .topnav__menu-content {
      translate: 0;

      @media (prefers-reduced-motion) {
        opacity: 1;
      }
    }
    + .topnav__menu-content::before {
      opacity: 1;
    }
    + .topnav__menu .topnav__close {
      display: block;
    }
  }

  .topnav__close {
    display: none;
    margin-inline-start: auto;
    margin-block-end: 8rem;
    position: absolute;
    top: 19px;
  }

  .topnav__menu-content {
    display: flex;
    justify-content: space-between;

    @media (width < calc(700 / 16 * 1rem)) {
      flex-direction: column;
      position: fixed;
      inset: 60px 120px 0 0;
      padding: 64px 32px 24px;
      background-color: var(--c-xdark-navy);
      translate: -100vw 0;
      transition: translate 0.5s ease-in-out;
    }

    @media (width < calc(700 / 16 * 1rem)) and (prefers-reduced-motion) {
      translate: 0;
      opacity: 0;
      transition: opacity 500ms ease-in-out;
    }
  }

  .topnav__links {
    display: flex;
    align-items: center;
    gap: 1rem;
    margin: 0;
    padding: 0;

    @media (width < calc(700 / 16 * 1rem)) {
      flex-direction: column;
      align-items: stretch;
    }
  }

  .topnav__item {
    list-style-type: none;
  }

  .topnav__link {
    font-family: var(--ff-mono);
    font-weight: 700;
    color: var(--c-light-grey);

    @media (width >= calc(700 / 16 * 1rem)) {
      color: var(--c-dim-grey);
    }
  }
}

@layer hero {
  .hero {
    > * {
      grid-row: 1;
    }
    .hero-picture {
      max-height: 100vh;
      overflow: clip;
    }
    .hero-img {
      width: 100%;
    }
    .hero-content {
      place-self: center;
      justify-items: center;
      display: grid;
      color: var(--c-white);
      align-self: center;
      translate: 0 -24px;
      text-align: center;

      @media (width >= calc(700 / 16 * 1rem)) {
        max-width: 75%;
      }

      @media (width >= calc(1000 / 16 * 1rem)) {
        justify-self: start;
        justify-items: start;
        text-align: left;
        max-width: 55ch;
        translate: 0;
      }
    }

    p,
    .button {
      @media (width >= calc(1000 / 16 * 1rem)) {
        margin-inline-start: 95px;
      }
    }

    p {
      margin-block: 24px 32px;
    }

    .hero-l-arrow {
      display: none;

      @media (width >= calc(1000 / 16 * 1rem)) {
        display: block;
        align-self: center;
        translate: -140px 32px;
      }
    }

    .hero-r-arrow {
      align-self: end;
      translate: -240px -34px;

      @media (width >= calc(700 / 16 * 1rem)) {
        translate: -110px -34px;
      }

      @media (width >= calc(1000 / 16 * 1rem)) {
        translate: 530px 100px;
        grid-column: 2;
        align-self: center;
      }
    }

    .hero-circles {
      display: none;

      @media (width >= calc(700 / 16 * 1rem)) {
        display: block;
        justify-self: end;
        align-self: end;
        translate: 30px -45px;
      }

      @media (width >= calc(1000 / 16 * 1rem)) {
        display: none;
      }

      @media (width >= calc(1300 / 16 * 1rem)) {
        display: block;
        align-self: center;
        translate: 30px 130px;
      }
    }
  }
}
/* ... */

